fixed css bug in new admin styles that cut off large chunks of the header any time there was a flash

--- a/public/stylesheets/admin.css
+++ b/public/stylesheets/admin.css
@@ -7,6 +7,10 @@ body{
   background-color: #ddd;
 }
 
+#wrapper{
+  position: relative;
+}
+
 #header {
   width:100%;
   text-align: left;
@@ -244,6 +248,10 @@ a.button.icon.rss{
 
 .clickMenu li.main ul.innerBox li:hover, .clickMenu li.main ul.innerBox li:hover a {
   background-color: #ccc !important;
+}
+.clickMenu li.main ul.innerBox li a{
+  display: block;
+  width: 150px;
 }
 .clickMenu li.main ul.innerBox li a:hover {
   cursor: pointer;
